# git-filter-repo-mcp

./: .gitignore  LICENSE  README.md  config.example.json  git_mcp_spec_short.md  mcp_config_example.json  pyproject.toml
src/git_filter_repo_mcp/: __init__.py  adapter.py  ai_engine.py  config.py  secrets.py  server.py  tools.py
tests/: __init__.py  test_adapter.py  test_ai_engine.py  test_config.py  test_secrets.py  test_server.py  test_tools.py
