[project]
name = "git-filter-repo-mcp"
version = "0.1.0"
description = "MCP server for git-filter-repo - AI-powered git history rewriting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "git",
    "git-filter-repo",
    "mcp",
    "model-context-protocol",
    "ai",
    "commit-messages",
    "history-rewriting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "mcp>=1.0.0",
    "git-filter-repo>=2.38.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/zacala1/git-filter-repo-mcp"
Repository = "https://github.com/zacala1/git-filter-repo-mcp"
Issues = "https://github.com/zacala1/git-filter-repo-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.1.0",
]

[project.scripts]
git-filter-repo-mcp = "git_filter_repo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_filter_repo_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
